Update email summary tests